<resources>
    <string name="app_name">MoodSwings</string>
    <string name="title_home">Home</string>
    <string name="title_survey">Survey</string>
    <string name="title_camera">Camera</string>
    <string name="title_journal">Journal</string>
    <string name="welcome_to">Welcome To</string>
    <string name="sign_in">Sign-In</string>
    <string name="a_mood_monitoring_app">A Mood Monitoring App</string>
    <string name="todo">TODO</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="textview">TextView</string>
    <string name="your_mood_swings">Your Mood Swings</string>
    <string name="tomorrow_s_mood">Tomorrow\'s Mood</string>
    <string name="today_s_mood">Today\'s Mood</string>
    <string name="your_mood_predictions">Your Mood Predictions</string>
    <string name="daily_mood_tracker">Daily Mood Tracker</string>
    <string name="moodswings3">MoodSwings</string>
    <string name="googleSignInBtn">Google Login</string>
    <string name="signOutBtn">Sign Out</string>
    <string name="angry_1">1</string>
    <string name="survey_title_1">How are you feeling?</string>
    <string name="survey_title_2">What Did You Do Today?</string>
    <string name="survey_title_3">Diary Entry</string>
    <string name="survey_title_tomorrow_1">What Will You Do Tomorrow?</string>
    <string name="sad_3">3</string>
    <string name="misery_2">2</string>
    <string name="good_5">5</string>
    <string name="happy_6">6</string>
    <string name="okay_4">4</string>
    <string name="next">Next</string>
    <string name="done">Done</string>
    <string name="school">hello</string>
    <string name="work">work</string>
    <string name="date">Date</string>
    <string name="gym">Gym</string>
    <string name="friend_time">Friend Time</string>
    <string name="good_food">Good Food</string>
    <string name="good_sleep">Good Sleep</string>
    <string name="reading">Reading</string>
    <string name="bad_food">Bad Food</string>
    <string name="exercise">Exercise</string>
    <string name="bad_sleep">Bad Sleep</string>
    <string name="start_your_diary_entry_here">Start your diary entry here...</string>
    <string name="text_4">4</string>
    <string name="text_3">3</string>
    <string name="text_2">2</string>
    <string name="text_1">1</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="today_s_most_impactful_activity">Today\'s Most Impactful Activity</string>
    <string name="work_school_today">Work/School</string>
    <string name="hobbies_today">Hobbies</string>
    <string name="leisure_time_today">Leisure Time</string>
    <string name="errands_today">Errands</string>
    <string name="social_event_today">Social Event</string>
    <string name="tomorrow_s_most_impactful_activity">Tomorrow\'s Most Impactful Activity</string>
    <string name="work_school_tomorrow">Work/School</string>
    <string name="hobbies_tomorrow">Hobbies</string>
    <string name="leisure_time_tomorrow">Leisure Time</string>
    <string name="errands_tomorrow">Errands</string>
    <string name="social_event_tomorrow">Social Event</string>
    <string name="take_today_s_survey">Take Today\'s Survey</string>
    <string name="take_tomorrow_s_survey">Take Tomorrow\'s Survey</string>
    <string name="todo_string">TODO</string>
    <string name="m_1">TODO</string>
    <string name="m_2">TODO</string>
    <string name="m_3">TODO</string>
    <string name="m_5">TODO</string>
    <string name="m_6">TODO</string>
    <string name="your_surveys">Your Surveys</string>
    <string name="example_date">Wednesday, May 22, 2019</string>
    <string name="example_mood">Mood: 2</string>
    <string name="example_entry">Survey Entry: TIFU</string>
    <string name="example_activity">Activities: School</string>
</resources>
