<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height= "wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/example_date"
        android:textSize="20sp"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/Mood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_mood"
        android:layout_marginStart="16dp"/>
    <TextView
        android:id="@+id/surveyEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_entry"
        android:layout_marginStart="16dp"/>

    <TextView
        android:id="@+id/Activities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_activity"
        android:layout_marginStart="16dp"/>
</LinearLayout>