<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar">

    <TextView
        android:id="@+id/MoodSwingTitleID"
        android:layout_width="412dp"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="650dp"
        android:shadowColor="#00FFFFFF"
        android:text="@string/moodswings3"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4EB4A1"
        android:textSize="45sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.444" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="305dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="296dp"
        android:background="#8B4EB4A1"
        android:backgroundTint="#4EB4A1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodSwingTitleID" />

    <TextView
        android:id="@+id/TomorrowMoodTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="130dp"
        android:text="@string/tomorrow_s_mood"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7F4F4"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <TextView
        android:id="@+id/MoodPredictionTitleID"
        android:layout_width="376dp"
        android:layout_height="57dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="230dp"
        android:text="@string/your_mood_predictions"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7F4F4"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TodaysMoodTextID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="60dp"
        android:text="@string/today_s_mood"
        android:textColor="@android:color/white"
        android:textColorHighlight="#F7F4F4"
        android:textSize="24sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/TomorrowMoodTextID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view2" />

    <Button
        android:id="@+id/TodayMoodBtnID"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_centerInParent="true"
        android:layout_marginStart="290dp"
        android:layout_marginTop="29dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circle_shape"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/MoodPredictionTitleID"
        android:onClick="TodayMoodClick"
        />

    <Button
        android:id="@+id/TomorrowMoodBtnID"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_centerInParent="true"
        android:layout_marginStart="290dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/circle_shape"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TodayMoodBtnID" />

    <TextView
        android:id="@+id/DailyMoodTrackerID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="236dp"
        android:text="@string/daily_mood_tracker"
        android:textColor="#4EB4A1"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <Button
        android:id="@+id/signOutBtn"
        android:layout_width="68dp"
        android:layout_height="52dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="340dp"
        android:layout_marginBottom="600dp"
        android:text="@string/signOutBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/MoodSwingTitleID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.jjoe64.graphview.GraphView
        android:id="@+id/moodgraph"
        android:layout_width="347dp"
        android:layout_height="171dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DailyMoodTrackerID"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>