<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="93dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/angry_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4EB4A1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/todayMoodBtnID3"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <View
        android:id="@+id/view3"
        android:layout_width="418dp"
        android:layout_height="163dp"
        android:layout_marginBottom="230dp"
        android:background="#524EB4A1"
        app:layout_constraintBottom_toTopOf="@+id/TodayMoodBtnID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="396dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="600dp"
        android:gravity="center"
        android:text="@string/survey_title_1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@android:color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <Button
        android:id="@+id/button2"
        android:layout_marginStart="96dp"
        android:layout_marginTop="450dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="78dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_button"
        android:radius="3dp"
        android:text="Next"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:padding="10dp"
        tools:ignore="MissingConstraints"
        android:drawableEnd="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintVertical_bias="0.529" />


    <Button
        android:id="@+id/TodayMoodBtnID"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="113dp"
        android:background="@drawable/circle_okay"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayMoodBtnID3" />

    <Button
        android:id="@+id/todayMoodBtnID4"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="113dp"
        android:background="@drawable/circle_good"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintStart_toEndOf="@+id/TodayMoodBtnID"
        app:layout_constraintTop_toBottomOf="@+id/todayMoodBtnID" />

    <Button
        android:id="@+id/todayMoodBtnID5"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/circle_happy"
        android:textColor="#fff"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/todayMoodBtnID4"
        app:layout_constraintTop_toBottomOf="@+id/todayMoodBtnID2" />

    <Button
        android:id="@+id/todayMoodBtnID"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="39dp"
        android:layout_marginTop="220dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/circle_misery"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/todayMoodBtnID3"
        app:layout_constraintTop_toTopOf="@+id/view3" />

    <Button
        android:id="@+id/todayMoodBtnID2"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/circle_sad"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/todayMoodBtnID"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/todayMoodBtnID3"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="36dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="400dp"
        android:background="@drawable/circle_angry"
        android:textColor="#fff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/todayMoodBtnID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/sad_3"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4EB4A1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/todayMoodBtnID2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="94dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/misery_2"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4EB4A1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/todayMoodBtnID"
        app:layout_constraintEnd_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="17dp"
        android:layout_marginBottom="7dp"
        android:gravity="center"
        android:text="@string/good_5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4EB4A1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/todayMoodBtnID4"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/todayMoodBtnID" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/happy_6"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4EB4A1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/todayMoodBtnID5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/todayMoodBtnID2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="34dp"
        android:layout_height="37dp"
        android:layout_marginStart="61dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="7dp"
        android:gravity="center"
        android:text="@string/okay_4"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#4EB4A1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/TodayMoodBtnID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/todayMoodBtnID3" />
</android.support.constraint.ConstraintLayout>